<resources>
    <string name="app_name">PelemZamanNow</string>
    <string name="masukkan_nama_film_yang_dicari">Masukkan nama film yang dicari</string>
    <string name="ini_judul_film">Ini Judul Film</string>
    <string name="ini_deskripsi_film">Ini Deskripsi Film</string>
    <string name="ini_release_date">Ini Release Date</string>
    <string name="cari_film">Cari Film</string>
    <string name="ini_judul_film_detail">Ini judul film detail</string>
    <string name="attribute">Attribute:</string>
    <string name="rate_average">Rate Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="titik_dua">:</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="copyright_by_tmdb">Copyright by TMDB</string>
    <string name="gambar_poster_film">Gambar Poster Film</string>
</resources>
