<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/img_poster_film"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:background="@drawable/bg_background_red"
        android:contentDescription="@string/gambar_poster_film"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tv_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@id/img_poster_film"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/ini_judul_film"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_original_title"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@id/img_poster_film"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/ini_deskripsi_film"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_poster_film"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@id/img_poster_film"
        android:text="@string/ini_release_date"
        android:textSize="16sp" />

</RelativeLayout>