<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_film_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DetailPelemActivity">

    <TextView
        android:id="@+id/tv_detail_original_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/ini_judul_film_detail"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_detail_poster"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/rate_average" />

                    <TextView
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_rate_film"
                        style="@style/TextSpec.Value"
                        android:text="@string/rate_average" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/vote_count" />

                    <TextView
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_vote_count"
                        style="@style/TextSpec.Value"
                        android:text="@string/vote_count" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/release_date"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_release_date"
                        style="@style/TextSpec.Value"
                        android:text="@string/release_date" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/description" />

                    <TextView
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tv_detail_description"
                style="@style/TextSpec.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/copyright_by_tmdb"
                android:textStyle="italic" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>